# map-knowledge

./: .gitignore  NOTES.md  README.md  compare_all.sh  compare_model.sh  pyproject.toml  release.sh
examples/: ardell.py  keast.py  npo.py  npo_summary.py  test.py
mapknowledge/: __init__.py  anatomical_types.py  apinatomy.py  namespaces.py  npo.py  nposparql.py  scicrunch.py  utils.py
mapknowledge/competency/: __init__.py
sckan/: sckan-2024-03-26-npo.json  sckan-2024-08-29-npo.json  sckan-2024-09-21-npo.json  sckan-2024-09-21.json
sql/: map-knowledge.schema.sql  map-knowledge.sql  setup.md
tests/: test_nerves.py
tools/: compare.py  extract_knowledge.py  pg_import.py  sckan_connectivity.py  sckan_stats.py
