[tool.poetry]
name = "mapknowledge"
version = "0.21.0"
description = ""
authors = [
    "David Brooks <d.brooks@auckland.ac.nz>",
    "Tom Gillespie <tom.h.gillespie@gmail.com>",
    "Yuda Munarko <yuda.munarko@auckland.ac.nz>"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
networkx = "^3.4.0"
requests = "^2.28.1"
rdflib = "^7.0.0"
sparqlwrapper = "^2.0.0"
neurondm = {url = "https://github.com/tgbugs/pyontutils/releases/download/neurondm-0.1.8/neurondm-0.1.8-py2.py3-none-any.whl"}
pyontutils = {url = "https://github.com/tgbugs/pyontutils/releases/download/0.1.38/pyontutils-0.1.38-py2.py3-none-any.whl"}
structlog = "^24.4.0"
rich = "^13.9.4"
psycopg = {extras = ["binary", "pool"], version = "^3.2.5"}

[tool.poetry.group.tools.dependencies]
tqdm = "^4.66.5"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
sckan_connectivity = 'tools.sckan_connectivity:main'

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
