[project]
name = "mapknowledge"
version = "1.1.0"
description = "A sanitised and simplified view of SCKAN knowledge"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"},
    { name = "Tom Gillespie", email = "tom.h.gillespie@gmail.com"},
    { name = "Yuda Munarko", email = "yuda.munarko@auckland.ac.nz"},
]
requires-python = "==3.12.*"
dependencies = [
    "networkx>=3.3",
    "requests>=2.28.1",
    "rdflib>=7.1.4",
    "sparqlwrapper>=2.0.0",
    "neurondm @ https://github.com/tgbugs/pyontutils/releases/download/neurondm-0.1.8/neurondm-0.1.8-py2.py3-none-any.whl",
    "pyontutils @ https://github.com/tgbugs/pyontutils/releases/download/0.1.38/pyontutils-0.1.38-py2.py3-none-any.whl",
    "structlog>=24.4.0",
    "psycopg[binary,pool]>=3.2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
tools = [
    "tqdm>=4.66.5",
]

[project.scripts]
sckan_connectivity = 'tools.sckan_connectivity:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.uv]
default-groups = ["dev", "tools"]
