[project]
name = "mapknowledge"
version = "1.4.1"
description = "A sanitised and simplified view of SCKAN knowledge"
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"},
    { name = "Tom Gillespie", email = "tom.h.gillespie@gmail.com"},
    { name = "Yuda Munarko", email = "yuda.munarko@auckland.ac.nz"},
]
requires-python = "==3.12.*"
dependencies = [
    "networkx>=3.3",
    "requests>=2.28.1",
    "rdflib>=7.1.4",
    "sparqlwrapper>=2.0.0",
    "neurondm (==0.1.9)",
    "pyontutils (==0.1.39)",
    "structlog>=24.4.0",
    "psycopg[binary,pool]>=3.2.9",
]

[project.optional-dependencies]
tools = [
    "tqdm>=4.66.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "rdflib-endpoint[cli]>=0.5.3",
    "tqdm>=4.67.1",
]

[project.scripts]
sckan_connectivity = 'tools.sckan_connectivity:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
